Replace `$$` with `shadowRoot.querySelector`
`$$` is deprecated: https://polymer-library.polymer-project.org/2.0/docs/upgrade

Change-Id: Ib3fd45298da1b44325d47932e53e6185d25c13de

--- a/polygerrit-ui/app/elements/admin/gr-access-section/gr-access-section_test.html
+++ b/polygerrit-ui/app/elements/admin/gr-access-section/gr-access-section_test.html
@@ -536,7 +536,8 @@ limitations under the License.
         test('removing an added permission', () => {
           element.editing = true;
           assert.equal(element._permissions.length, 1);
-          element.$$('gr-permission').fire('added-permission-removed');
+          element.shadowRoot
+              .querySelector('gr-permission').fire('added-permission-removed');
           flushAsynchronousOperations();
           assert.equal(element._permissions.length, 0);
         });
