--- a/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list_test.html
+++ b/polygerrit-ui/app/elements/change/gr-file-list/gr-file-list_test.html
@@ -139,7 +139,8 @@ limitations under the License.
         assert.equal(
             Polymer.dom(element.root).querySelectorAll('.file-row').length,
             element.numFilesShown);
-        const controlRow = element.$$('.controlRow');
+        const controlRow = element.shadowRoot
+            .querySelector('.controlRow');
         assert.isFalse(controlRow.classList.contains('invisible'));
         assert.equal(element.$.incrementButton.textContent.trim(),
             'Show 300 more');
@@ -929,7 +930,8 @@ limitations under the License.
         const toggleExpandSpy = sandbox.spy(element, '_togglePathExpanded');
 
         // Tap the edit controls. Should be ignored by _handleFileListClick.
-        MockInteractions.tap(element.$$('.editFileControls'));
+        MockInteractions.tap(element.shadowRoot
+            .querySelector('.editFileControls'));
         assert.isTrue(clickSpy.calledOnce);
         assert.isFalse(toggleExpandSpy.called);
       });
@@ -1010,7 +1012,8 @@ limitations under the License.
         element._filesByPath = {
           '/COMMIT_MSG': {},
         };
-        assert.isNotOk(element.$$('.expanded'));
+        assert.isNotOk(element.shadowRoot
+            .querySelector('.expanded'));
       });
 
       test('tapping row ignores links', () => {
@@ -1034,9 +1037,11 @@ limitations under the License.
         MockInteractions.tap(commitMsgFile);
         flushAsynchronousOperations();
         assert(togglePathSpy.notCalled, 'file is opened as diff view');
-        assert.isNotOk(element.$$('.expanded'));
-        assert.notEqual(getComputedStyle(element.$$('.show-hide')).display,
-            'none');
+        assert.isNotOk(element.shadowRoot
+            .querySelector('.expanded'));
+        assert.notEqual(getComputedStyle(element.shadowRoot
+            .querySelector('.show-hide')).display,
+        'none');
       });
 
       test('_togglePathExpanded', () => {
@@ -1045,19 +1050,22 @@ limitations under the License.
         const renderSpy = sandbox.spy(element, '_renderInOrder');
         const collapseStub = sandbox.stub(element, '_clearCollapsedDiffs');
 
-        assert.equal(element.$$('iron-icon').icon, 'gr-icons:expand-more');
+        assert.equal(element.shadowRoot
+            .querySelector('iron-icon').icon, 'gr-icons:expand-more');
         assert.equal(element._expandedFilePaths.length, 0);
         element._togglePathExpanded(path);
         flushAsynchronousOperations();
         assert.equal(collapseStub.lastCall.args[0].length, 0);
-        assert.equal(element.$$('iron-icon').icon, 'gr-icons:expand-less');
+        assert.equal(element.shadowRoot
+            .querySelector('iron-icon').icon, 'gr-icons:expand-less');
 
         assert.equal(renderSpy.callCount, 1);
         assert.include(element._expandedFilePaths, path);
         element._togglePathExpanded(path);
         flushAsynchronousOperations();
 
-        assert.equal(element.$$('iron-icon').icon, 'gr-icons:expand-more');
+        assert.equal(element.shadowRoot
+            .querySelector('iron-icon').icon, 'gr-icons:expand-more');
         assert.equal(renderSpy.callCount, 1);
         assert.notInclude(element._expandedFilePaths, path);
         assert.equal(collapseStub.lastCall.args[0].length, 1);
