--- a/polygerrit-ui/app/elements/change-list/gr-create-change-help/gr-create-change-help_test.html
+++ b/polygerrit-ui/app/elements/change-list/gr-create-change-help/gr-create-change-help_test.html
@@ -48,7 +48,8 @@ limitations under the License.
 
     test('Create change tap', done => {
       element.addEventListener('create-tap', () => done());
-      MockInteractions.tap(element.$$('gr-button'));
+      MockInteractions.tap(element.shadowRoot
+          .querySelector('gr-button'));
     });
   });
 </script>
