--- a/polygerrit-ui/app/elements/change/gr-confirm-cherrypick-conflict-dialog/gr-confirm-cherrypick-conflict-dialog_test.html
+++ b/polygerrit-ui/app/elements/change/gr-confirm-cherrypick-conflict-dialog/gr-confirm-cherrypick-conflict-dialog_test.html
@@ -52,7 +52,8 @@ limitations under the License.
       const confirmHandler = sandbox.stub();
       element.addEventListener('confirm', confirmHandler);
       sandbox.spy(element, '_handleConfirmTap');
-      element.$$('gr-dialog').fire('confirm');
+      element.shadowRoot
+          .querySelector('gr-dialog').fire('confirm');
       assert.isTrue(confirmHandler.called);
       assert.isTrue(confirmHandler.calledOnce);
       assert.isTrue(element._handleConfirmTap.called);
@@ -63,7 +64,8 @@ limitations under the License.
       const cancelHandler = sandbox.stub();
       element.addEventListener('cancel', cancelHandler);
       sandbox.spy(element, '_handleCancelTap');
-      element.$$('gr-dialog').fire('cancel');
+      element.shadowRoot
+          .querySelector('gr-dialog').fire('cancel');
       assert.isTrue(cancelHandler.called);
       assert.isTrue(cancelHandler.calledOnce);
       assert.isTrue(element._handleCancelTap.called);
