--- a/polygerrit-ui/app/elements/shared/gr-autocomplete/gr-autocomplete_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-autocomplete/gr-autocomplete_test.html
@@ -371,7 +371,8 @@ limitations under the License.
     test('_focused flag properly triggered', done => {
       flush(() => {
         assert.isFalse(element._focused);
-        const input = element.$$('paper-input').inputElement;
+        const input = element.shadowRoot
+            .querySelector('paper-input').inputElement;
         MockInteractions.focus(input);
         assert.isTrue(element._focused);
         done();
@@ -380,11 +381,13 @@ limitations under the License.
 
     test('search icon shows with showSearchIcon property', done => {
       flush(() => {
-        assert.equal(getComputedStyle(element.$$('iron-icon')).display,
-            'none');
+        assert.equal(getComputedStyle(element.shadowRoot
+            .querySelector('iron-icon')).display,
+        'none');
         element.showSearchIcon = true;
-        assert.notEqual(getComputedStyle(element.$$('iron-icon')).display,
-            'none');
+        assert.notEqual(getComputedStyle(element.shadowRoot
+            .querySelector('iron-icon')).display,
+        'none');
         done();
       });
     });
@@ -517,7 +520,8 @@ limitations under the License.
         assert.isFalse(element.$.suggestions.isHidden);
 
         MockInteractions.pressAndReleaseKeyOn(
-            element.$.suggestions.$$('li:first-child'), 9, null, 'tab');
+            element.$.suggestions.shadowRoot
+                .querySelector('li:first-child'), 9, null, 'tab');
         flushAsynchronousOperations();
         assert.isFalse(commitSpy.called);
         assert.isFalse(element._focused);
@@ -533,7 +537,8 @@ limitations under the License.
         assert.isFalse(element.$.suggestions.isHidden);
 
         MockInteractions.pressAndReleaseKeyOn(
-            element.$.suggestions.$$('li:first-child'), 9, null, 'tab');
+            element.$.suggestions.shadowRoot
+                .querySelector('li:first-child'), 9, null, 'tab');
         flushAsynchronousOperations();
 
         assert.isTrue(commitSpy.called);
@@ -546,7 +551,8 @@ limitations under the License.
         element._suggestions = [{name: 'first suggestion'}];
         Polymer.dom.flush();
         assert.isFalse(element.$.suggestions.isHidden);
-        MockInteractions.tap(element.$.suggestions.$$('li:first-child'));
+        MockInteractions.tap(element.$.suggestions.shadowRoot
+            .querySelector('li:first-child'));
         flushAsynchronousOperations();
 
         assert.isFalse(focusSpy.called);
