--- a/polygerrit-ui/app/elements/shared/gr-comment-thread/gr-comment-thread_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-comment-thread/gr-comment-thread_test.html
@@ -202,7 +202,8 @@ limitations under the License.
       test('optionally show file path', () => {
         // Path info doesn't exist when showFilePath is false. Because it's in a
         // dom-if it is not yet in the dom.
-        assert.isNotOk(element.$$('.pathInfo'));
+        assert.isNotOk(element.shadowRoot
+            .querySelector('.pathInfo'));
 
         sandbox.stub(Gerrit.Nav, 'getUrlForDiffById');
         element.changeNum = 123;
@@ -212,9 +213,11 @@ limitations under the License.
         element.lineNum = 5;
         element.showFilePath = true;
         flushAsynchronousOperations();
-        assert.isOk(element.$$('.pathInfo'));
-        assert.notEqual(getComputedStyle(element.$$('.pathInfo')).display,
-            'none');
+        assert.isOk(element.shadowRoot
+            .querySelector('.pathInfo'));
+        assert.notEqual(getComputedStyle(element.shadowRoot
+            .querySelector('.pathInfo')).display,
+        'none');
         assert.isTrue(Gerrit.Nav.getUrlForDiffById.lastCall.calledWithExactly(
             element.changeNum, element.projectName, element.path,
             element.patchNum, null, element.lineNum));
@@ -276,7 +279,8 @@ limitations under the License.
     });
 
     test('reply', () => {
-      const commentEl = element.$$('gr-comment');
+      const commentEl = element.shadowRoot
+          .querySelector('gr-comment');
       const reportStub = sandbox.stub(element.$.reporting,
           'recordDraftInteraction');
       assert.ok(commentEl);
@@ -293,7 +297,8 @@ limitations under the License.
     });
 
     test('quote reply', () => {
-      const commentEl = element.$$('gr-comment');
+      const commentEl = element.shadowRoot
+          .querySelector('gr-comment');
       const reportStub = sandbox.stub(element.$.reporting,
           'recordDraftInteraction');
       assert.ok(commentEl);
@@ -324,7 +329,8 @@ limitations under the License.
       }];
       flushAsynchronousOperations();
 
-      const commentEl = element.$$('gr-comment');
+      const commentEl = element.shadowRoot
+          .querySelector('gr-comment');
       assert.ok(commentEl);
 
       const quoteBtn = element.$.quoteBtn;
@@ -345,7 +351,8 @@ limitations under the License.
       element.changeNum = '42';
       element.patchNum = '1';
 
-      const commentEl = element.$$('gr-comment');
+      const commentEl = element.shadowRoot
+          .querySelector('gr-comment');
       assert.ok(commentEl);
 
       const ackBtn = element.$.ackBtn;
@@ -366,7 +373,8 @@ limitations under the License.
           'recordDraftInteraction');
       element.changeNum = '42';
       element.patchNum = '1';
-      const commentEl = element.$$('gr-comment');
+      const commentEl = element.shadowRoot
+          .querySelector('gr-comment');
       assert.ok(commentEl);
 
       const doneBtn = element.$.doneBtn;
@@ -386,12 +394,14 @@ limitations under the License.
       element.changeNum = '42';
       element.patchNum = '1';
       element.path = '/path/to/file.txt';
-      const commentEl = element.$$('gr-comment');
+      const commentEl = element.shadowRoot
+          .querySelector('gr-comment');
       assert.ok(commentEl);
 
       const saveOrDiscardStub = sandbox.stub();
       element.addEventListener('thread-changed', saveOrDiscardStub);
-      element.$$('gr-comment')._fireSave();
+      element.shadowRoot
+          .querySelector('gr-comment')._fireSave();
 
       flush(() => {
         assert.isTrue(saveOrDiscardStub.called);
@@ -407,7 +417,8 @@ limitations under the License.
     test('please fix', done => {
       element.changeNum = '42';
       element.patchNum = '1';
-      const commentEl = element.$$('gr-comment');
+      const commentEl = element.shadowRoot
+          .querySelector('gr-comment');
       assert.ok(commentEl);
       commentEl.addEventListener('create-fix-comment', () => {
         const drafts = element._orderedComments.filter(c => c.__draft == true);
@@ -558,7 +569,8 @@ limitations under the License.
     });
 
     test('comment-update', () => {
-      const commentEl = element.$$('gr-comment');
+      const commentEl = element.shadowRoot
+          .querySelector('gr-comment');
       const updatedComment = {
         id: element.comments[0].id,
         foo: 'bar',
